fix: align the 'delete suggestion' button in draft to always be at right edge

--- a/frontend/src/pages/draft/styles.module.css
+++ b/frontend/src/pages/draft/styles.module.css
@@ -412,6 +412,10 @@ h4 {
 	margin: 8px;
 }
 
+.historyText {
+	flex: 1;
+}
+
 .savedIconsContainer {
 	display: flex;
 	flex-direction: column;
